--- a/front-end/morchor-map/package.json
+++ b/front-end/morchor-map/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.10.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
