--- a/front-end/morchor-map/package.json
+++ b/front-end/morchor-map/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.5.4",
+    "dotenv": "^16.4.2",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
