--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 GOOGLE_MAPS_API = PLACE_YOUR_GOOGLE_MAPS_API_KEY_HERE
 MONGO_DB_DEV = PLACE_YOUR_MONGO_DB_DEV_LINK_HERE
 MONGO_DB_PROD = PLACE_YOUR_MONGO_DB_PROD_LINK_HERE
+FRONT_END = PLACE_YOUR_FRONT_END_LINK_HERE
